2013-01-30  Thiago Marcos P. Santos  <thiago.santos@intel.com>

        REGRESSION (r141051): Broke plugin support on non-Mac WebKit2 Ports
        https://bugs.webkit.org/show_bug.cgi?id=108182

        Reviewed by Sam Weinig.

        Send the plugin path to the PluginProcess as a parameter.

        * PluginProcess/qt/PluginProcessMainQt.cpp:
        (WebKit::PluginProcessMain):
        * PluginProcess/unix/PluginProcessMainUnix.cpp:
        (WebKit::PluginProcessMainUnix):
        * UIProcess/Launcher/efl/ProcessLauncherEfl.cpp:
        (WebKit::ProcessLauncher::launchProcess):
        * UIProcess/Launcher/gtk/ProcessLauncherGtk.cpp:
        (WebKit::ProcessLauncher::launchProcess):
        * UIProcess/Launcher/qt/ProcessLauncherQt.cpp:
        (WebKit::ProcessLauncher::launchProcess):
        * UIProcess/Plugins/qt/PluginProcessProxyQt.cpp:
        (WebKit::PluginProcessProxy::platformInitializeLaunchOptions):
        * UIProcess/Plugins/unix/PluginProcessProxyUnix.cpp:
        (WebKit::PluginProcessProxy::platformInitializeLaunchOptions):

2013-01-30  Christophe Dumez  <christophe.dumez@intel.com>

        [EFL][WK2] Use C API inside ewk_window_features
        https://bugs.webkit.org/show_bug.cgi?id=107924

        Reviewed by Sam Weinig.

        Use C API inside ewk_window_features instead of accessing
        internal C++ classes directly, to avoid violating API
        layering.

        * UIProcess/API/efl/EwkView.cpp:
        (EwkView::createNewPage):
        * UIProcess/API/efl/EwkView.h:
        (EwkView):
        * UIProcess/API/efl/ewk_window_features.cpp:
        (EwkWindowFeatures::EwkWindowFeatures):
        (getWindowFeatureValue):
        (EwkWindowFeatures::getWindowFeatureBoolValue):
        (EwkWindowFeatures::getWindowFeatureDoubleValue):
        (ewk_window_features_geometry_get):
        * UIProcess/API/efl/ewk_window_features_private.h:
        (EwkWindowFeatures::create):
        (EwkWindowFeatures::geometry):