@@ -1,3 +1,14 @@
+2013-01-30  Zoltan Arvai  <zarvai@inf.u-szeged.hu>
+
+        [Qt] Fix Win build after r141177
+        https://bugs.webkit.org/show_bug.cgi?id=108325
+
+        Reviewed by Anders Carlsson.
+
+        * Platform/CoreIPC/win/ConnectionWin.cpp:
+        (CoreIPC::Connection::readEventHandler):
+        (CoreIPC::Connection::sendOutgoingMessage):
+
 2013-01-30  Thiago Marcos P. Santos  <thiago.santos@intel.com>
 
         REGRESSION (r141051): Broke plugin support on non-Mac WebKit2 Ports
